Showed how to fix cards
Check it out

--- a/templates/build-ideas.html
+++ b/templates/build-ideas.html
@@ -79,7 +79,7 @@
   					<div class="flip-card-content">
     					<div class="card-front">
       						<div class = "card-image">
-								<img src = "{{url_for('static', filename='images/house-build.jpg')}}" alt = "House Build" class = "build-img"  id = "house">
+								<img class = "card-image" src = "{{url_for('static', filename='images/house-build.jpg')}}" alt = "House Build" class = "build-img"  id = "house">
 							</div>
 							<div class="card-description">
 								<h2 class = "text-desc">Starter House</h2>
@@ -116,7 +116,7 @@
   					<div class="flip-card-content">
     					<div class="card-front">
       						<div class = "card-image">
-								<img src = "{{url_for('static', filename='images/aquarium-build.jpg')}}" alt = "Aquarium Build" class = "build-img" id = "aquarium">
+								<img class = "card-image" src = "{{url_for('static', filename='images/aquarium-build.jpg')}}" alt = "Aquarium Build" class = "build-img" id = "aquarium">
 							</div>
 							<div class="card-description">
 								<h2 class = "text-desc">Wall-less Aquarium</h2>
@@ -153,7 +153,7 @@
   					<div class="flip-card-content">
     					<div class="card-front">
       						<div class = "card-image">
-								<img src = "{{url_for('static', filename='images/stable-build.jpg')}}" alt = "Horse Stable Build" class = "build-img" id = "stable">
+								<img class = "card-image" src = "{{url_for('static', filename='images/stable-build.jpg')}}" alt = "Horse Stable Build" class = "build-img" id = "stable">
 							</div>
 							<div class="card-description">
 								<h2 class = "text-desc">Horse Stable</h2>
@@ -190,7 +190,7 @@
   					<div class="flip-card-content">
     					<div class="card-front">
       						<div class = "card-image">
-								<img src = "{{url_for('static', filename='images/boat-build.jpg')}}" alt = "Boat Build" class = "build-img" id = "boat">
+								<img class = "card-image" src = "{{url_for('static', filename='images/boat-build.jpg')}}" alt = "Boat Build" class = "build-img" id = "boat">
 							</div>
 							<div class="card-description">
 								<h2 class = "text-desc">Boat House</h2>
@@ -225,7 +225,7 @@
   					<div class="flip-card-content">
     					<div class="card-front">
       						<div class = "card-image">
-								<img src = "{{url_for('static', filename='images/nether-build.jpg')}}" alt = "Nether Base Build" class = "build-img" id = "nether">
+								<img class = "card-image" src = "{{url_for('static', filename='images/nether-build.jpg')}}" alt = "Nether Base Build" class = "build-img" id = "nether">
 							</div>
 							<div class="card-description">
 								<h2 class = "text-desc">Nether Base</h2>
