--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -14,7 +14,26 @@
 			</div>
 
 			<div id="comments">
+				<form>
+					<h1>Comments</h1>
+					<input type="text" style="width: 50%;" name="comment">
+					<input type="submit" formaction='/comment/{{  }}' formmethod="post" value="Comment">
+				</form>
 
+				<div id = "list-comments">
+				<table>
+					{% for row in comments %}
+						<tr>
+							<td>
+								<label class="checkbox">
+								  <input type="checkbox" class = "check-box-input" name="blog-title" />
+								</label>
+								<label>{{ row[2] }}</label>
+							</td>
+						</tr>
+					{% endfor %}
+	    		</table>
+	    	</div>
 			</div>
 		</div>
 {% endblock %}
