--- a/static/css/blog-post.css
+++ b/static/css/blog-post.css
@@ -6,6 +6,31 @@
     font-size: 3em;
 }
 
+td {
+    font-size: 1em;
+}
+
+td:hover {
+    background-color: #00802b;
+}
+
+table {
+    width: 20%;
+}
+
+input {
+    width: 50%;
+}
+
+#commentbutton {
+    width: 25%;
+}
+
+#comments, #commentform {
+    display: flex;
+    flex-direction: column;
+}
+
 
 
 
