--- a/templates/new-blog-post.html
+++ b/templates/new-blog-post.html
@@ -4,9 +4,9 @@
 		<div class = "main">
             <form>
                 <h2>Title</h2>
-                <input type="text" style="width: 100%;" name="subject"><br><br>
+                <input type="text" style="width: 100%;" name="subject" required><br><br>
                 <h2>Begin your post here</h2>
-                <textarea rows="10" style="width: 100%;" name="body"></textarea><br><br>
+                <textarea rows="10" style="width: 100%;" name="body" required></textarea><br><br>
 			<!-- This <a> is just to link to the blog post example -->
 				<input type="submit" formaction='/addblog' formmethod="post">
             </form>
