--- a/templates/build-ideas.html
+++ b/templates/build-ideas.html
@@ -55,24 +55,21 @@
 {% block content %}
     <!-- Main Body of Page -->
 		<div class = "main">
-			<div id="haveidea">
-				<h1>Have a build idea?</h1><a href="/buildform"><input type="button" value = "Tell Us." id = "build-idea-button"></a>
-<!-- delete this and lines below when done -->
-				<p>Andrew! Delete all this text when you're done but this is what i was using to help
-					me with the cards if this helps you: <br>
-				<a href = "https://www.w3schools.com/howto/howto_css_flip_card.asp" target = "_blank">
-					https://www.w3schools.com/howto/howto_css_flip_card.asp</a>
-				<br><br><b>I did end up fixing the buttons on the back of the cards</b> (did something with a flex box and it
-				ended up working so I'm happy with it) also... if you could, I tried fixing this and idk if my computer
-				is bugging out or not but <b>the "to top" at the bottom is turning green when hovering and its pissing me
-				off GRRRR (PS... as i was writing all this to you, i realized that the cards are far down enough where
-				they dont overlap on the banner so we can always add text here to describe to the users that come to
-				the webpage. If you want to do that, I can type something up tomorrow about this) I literally have the
-				exact same css code styling in the .css file and above this in the code but it only is working in here. </b>
-				If we cant figure it out by tomorrow, maybe we can ask Dr. Gomes what to do about the styling. But
-				anyways, I am done with this tonight and Ill be working on this again when i get back from BioLife in
-				the morning. GOOD LUCK TONIGHT :) We've got thisssssss.</p>
+			<center>
+			<div id = "suggest-idea">
+				<h1>Have a build idea?</h1>
+				<a href="/buildform">
+					<input type="button" value = "Tell Us.">
+				</a><br><br>
 			</div>
+			</center>
+
+			<p>We know with all the freedom Minecraft offers, there is a lot to create or build within your world.
+					That being said, we created this page to inspire you about different builds you can make. In each
+					build, we are displaying what the end result should reflect, what materials you will need, a link to
+					a YouTube video from the original builder, and a section to leave feedback about the build that can
+					tell users that other players like the build too.<br>
+				</p>
 
 <!-- Work in Progress -->
 			<div class = "cards-container">
