--- a/static/css/build-ideas_style.css
+++ b/static/css/build-ideas_style.css
@@ -1,16 +1,7 @@
-#haveidea {
-    margin-top: 10px;
-    margin-bottom: 10px;
+#suggest-idea {
+    display: flex;
+    flex-direction: row;
 }
-
-/*
-#haveidea a {
-    border: 2px solid black;
-    border-radius: 5px;
-    background-color: green;
-    padding: 2px;
-}
-*/
 
 /* -------------------- Flip Card ---------------------- */
 
@@ -166,4 +157,9 @@ h3 {
 
 li {
     font-size: 1em;
+}
+
+h1 {
+    display: inline-block;
+    display: inline;
 }
