--- a/templates/world-seeds.html
+++ b/templates/world-seeds.html
@@ -3,9 +3,12 @@
 {% block content %}
     <!-- Main Body of Page -->
 		<div class = "main">
+			<center>
 			<div id = "create-world-seed">
-				<a href="/newseed"><center><input type="button" value = "Add a World Seed" id = "new-seed"></center></a>
+				<a href="/newseed"><input type="button" value = "Add a World Seed" id = "new-seed"></a>
+				<input type="button" value = "Delete Seed" id = "delete-seed">
             </div>
+			</center>
             <div class = "list-world-seeds">
                     <table class="listings">
 	        		<tr>
