--- a/static/css/blog-posts-hub_style.css
+++ b/static/css/blog-posts-hub_style.css
@@ -1,5 +1,8 @@
-#make-blog-post {
+#blog-post-buttons {
     margin: 0 auto 10px;            /* centered and bottom margin of 10px */
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-end;
 }
 
 
