--- a/templates/build-ideas.html
+++ b/templates/build-ideas.html
@@ -10,6 +10,7 @@
     box-sizing: border-box;
     perspective: 1000px;
     margin: 5px;
+
 }
 
 .flip-card-content {
@@ -19,6 +20,7 @@
     transition: transform 0.6s;
     transform-style: preserve-3d;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    border-radius: 10px;
 }
 
 .card-container:hover .flip-card-content {
