Added css file for world-seed hub page, align content better, add space

--- a/templates/new-blog-post.html
+++ b/templates/new-blog-post.html
@@ -8,7 +8,7 @@
                 <h2>Begin your post here</h2>
                 <textarea rows="10" style="width: 100%;" name="body" required></textarea><br><br>
 			<!-- This <a> is just to link to the blog post example -->
-				<input type="submit" formaction='/addblog' formmethod="post">
+				<input type="submit" formaction='/addblog' formmethod="post"><br><br>
             </form>
 		</div>
 {% endblock %}
