--- a/static/css/build-ideas_style.css
+++ b/static/css/build-ideas_style.css
@@ -1,6 +1,11 @@
 #suggest-idea {
     display: flex;
     flex-direction: row;
+    margin-bottom: 10px;
+}
+
+#tell-us-button {
+    margin-left: 10px;
 }
 
 /* -------------------- Flip Card ---------------------- */
@@ -71,6 +76,7 @@ I honestly don't understand what is happening but it pisses me off.
     height: 200px;
     width: 100%;
     box-sizing: border-box;
+    border-radius: 8px 8px 0 0;
 }
 
 
