--- a/static/css/get-mc_style.css
+++ b/static/css/get-mc_style.css
@@ -5,9 +5,9 @@
 }
 
 .option-selection {
-    width: 300px;
+    width: 225px;
     height: 200px;
-    margin: 10px;
+    margin: 10px 0;
     text-align: center;
     display: flex;
     align-items: center;
@@ -25,10 +25,12 @@
     margin-top: 10px;
     display: flex;
     flex-direction: row;
+    padding: 10px;
 }
 
 .purchase-where, .download-where {
     width: 50%;
+    margin-right: 20px;
 }
 
 /* ------------------------------------------------------------------------ */
