--- a/templates/build-ideas.html
+++ b/templates/build-ideas.html
@@ -61,7 +61,7 @@
 			<div id = "suggest-idea">
 				<h1>Have a build idea?</h1>
 				<a href="/buildform">
-					<input type="button" value = "Tell Us.">
+					<input type="button" value = "Tell Us." id = "tell-us-button">
 				</a><br><br>
 			</div>
 			</center>
