--- a/templates/world-seeds.html
+++ b/templates/world-seeds.html
@@ -1,5 +1,9 @@
 {% extends "template.html" %}
 
+{% block localcss %}
+    <link rel="stylesheet" href="{{url_for('static', filename='css/world-seeds-hub_style.css')}}">
+{% endblock %}
+
 {% block content %}
     <!-- Main Body of Page -->
 		<div class = "main">
