Finished filling out the flip cards

--- a/templates/build-ideas.html
+++ b/templates/build-ideas.html
@@ -71,9 +71,8 @@
 					build, we are displaying what the end result should reflect, what materials you will need, a link to
 					a YouTube video from the original builder, and a section to leave feedback about the build that can
 					tell users that other players like the build too.<br>
-				</p>
+			</p>
 
-<!-- Work in Progress -->
 			<div class = "cards-container">
 				<div class="card-container">
   					<div class="flip-card-content">
@@ -129,13 +128,13 @@
     						<div class = "build-material">
 								<a href = "https://youtu.be/wQI5lww6j9I" target="_blank"><h3 class = "tutorial">Tutorial</h3></a>
 								<ul>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
+									<li>Water Bucket</li>
+									<li>Smooth Quartz Stairs</li>
+									<li>Glass</li>
+									<li>Kelp (<i>Optional</i>)</li>
+									<li>Sea Grass (<i>Optional</i>)</li>
+									<li>Coral (<i>Optional</i>)</li>
+									<li>Fish (<i>Optional</i>)</li>
 								</ul>
 							</div>
 
@@ -166,13 +165,13 @@
     						<div class = "build-material">
 								<a href = "https://youtu.be/PPAa2T1pBto" target="_blank"><h3 class = "tutorial">Tutorial</h3></a>
 								<ul>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
+									<li>Spruce Log</li>
+									<li>Dark Oak/Spruce Stairs</li>
+									<li>Dark Oak/Spruce Slab</li>
+									<li>Dark Oak/Spruce Fence</li>
+									<li>Lantern</li>
+									<li>Hay Bale</li>
+									<li>Spruce Fence Gate</li>
 								</ul>
 							</div>
 
@@ -203,13 +202,17 @@
     						<div class = "build-material">
 								<a href = "https://youtu.be/kNFsOqg7aUo" target="_blank"><h3 class = "tutorial">Tutorial</h3></a>
 								<ul>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
+									<li>Spruce Trapdoor</li>
+									<li>Oak Trapdoor</li>
+									<li>Spruce Slab</li>
+									<li>Spruce Stairs</li>
+									<li>Spruce Fence</li>
+									<li>Spruce Fence Gate</li>
+									<li>Ladder</li>
+									<li>Oak Door</li>
+									<li>Stripped Spruce Log</li>
+									<li>Campfire</li>
+									<li>Water Bucket</li>
 								</ul>
 							</div>
 
@@ -236,15 +239,17 @@
     					</div>
     					<div class="card-back">
     						<div class = "build-material">
-								<a href = "https://youtu.be/3UndiBacPvw" target="_blank"><h3 class = "tutorial">Tutorial</h3></a>
+								<a href = "https://youtu.be/3UndiBacPvw?t=314" target="_blank"><h3 class = "tutorial">Tutorial</h3></a>
 								<ul>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
-									<li>Blank</li>
+									<li>Basalt</li>
+									<li>Nether Bricks</li>
+									<li>Nether Brick Stairs</li>
+									<li>Nether Brick Slab</li>
+									<li>Crimson Planks</li>
+									<li>Crimson Slab</li>
+									<li>Crimson Trapdoor</li>
+									<li>Crimson Stem</li>
+									<li>Crimson Fence</li>
 								</ul>
 							</div>
 
