--- a/templates/admin-login.html
+++ b/templates/admin-login.html
@@ -14,7 +14,7 @@
 				<label for="passw">Password</label>
 				<input type="text" placeholder="Enter Admin Password" name="passw" id ="passw" required>
 				<br>
-				<center><button type="submit" id = "login-button">Login</button></center>
+				<center><button type="submit" id = "login-button" class = "link-buttons">Login</button></center>
 			</form>
 			</div>
 		</div>
