--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -18,7 +18,7 @@
 					<h1>Comments</h1>
 					<input type="text"  name="myname" placeholder="Your Name" required>
 					<input type="text"  name="comment" placeholder="Your Comment" required>
-					<input id="commentbutton" type="submit" formaction='/comment/{{ post[0] }}' formmethod="post" value="Comment">
+					<input id="commentbutton" class = "link-buttons" type="submit" formaction='/comment/{{ post[0] }}' formmethod="post" value="Comment">
 				</form>
 
 				<div id = "list-comments">
