--- a/templates/blog-posts.html
+++ b/templates/blog-posts.html
@@ -9,8 +9,8 @@
 		<div class = "main">
 			<center>
 			<div id = "blog-post-buttons">
-				<a href="/newpost"><input type="button" value = "Create a Post" id = "new-post"></a>
-				<input type="button" value = "Delete Post" id = "delete-post">
+				<a href="/newpost"><input type="button" value = "Create a Post" id = "new-post" class = "link-buttons"></a>
+				<input type="button" value = "Delete Post" id = "delete-post" class = "link-buttons">
 	    	</div>
 			</center>
 			<div class = "list-blog-posts">
