--- a/templates/new-world-seed.html
+++ b/templates/new-world-seed.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
 
-                <input type="submit">
+                <input type="submit" class = "link-buttons">
                 <br><a href="/viewseed">link to seed</a>
                 <br><br>
             </form>
