--- a/templates/world-seeds.html
+++ b/templates/world-seeds.html
@@ -9,8 +9,8 @@
 		<div class = "main">
 			<center>
 			<div id = "create-world-seed">
-				<a href="/newseed"><input type="button" value = "Add a World Seed" id = "new-seed"></a>
-				<input type="button" value = "Delete Seed" id = "delete-seed">
+				<a href="/newseed"><input type="button" value = "Add a World Seed" id = "new-seed" class = "link-buttons"></a>
+				<input type="button" value = "Delete Seed" id = "delete-seed" class = "link-buttons">
             </div>
 			</center>
             <div class = "list-world-seeds">
