--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,7 +17,7 @@
 
 			<!-- Make a javacript for this for the onclick using: document.getElementById("link-get-mc").onclick = function () {
         location.href = "get-minecraft.html"; };-->
- 					<a href="/getmc"><input type="button" value = "Get Minecraft" id = "link-get-mc"></a>
+ 					<a href="/getmc"><input type="button" value = "Get Minecraft" id = "link-get-mc" class = "link-buttons"></a>
 				</div>
 			</div>
 			<div id = "about-mc">
