--- a/static/css/global.css
+++ b/static/css/global.css
@@ -70,16 +70,6 @@
    z-index: 2;
 }
 
-.link-buttons {
-    background-color: #af8c6a;
-    /* add a border */
-}
-
-.link-buttons:hover {
-    background-color: #c1a68b;          /* change this */
-    /* not sure if i need to add anything here */
-}
-
 /* ------------------------------------------------------------------------ */
 /* Navigation Bar Responsive */
 @media screen and (max-width: 700px) {
@@ -193,4 +183,25 @@ td:hover {
 
 /* ------------------------------------------------------------------------ */
 
+input[type=text], textarea {
+    background-color: #c1a68b;
+    padding: 5px;
+	border: 3px solid #af8c6a;
+	outline: none;
+}
 
+input[type=text]:focus, textarea:focus {
+    border: 3px solid #74593e;
+}
+
+.link-buttons {
+    background-color: #c1a68b;
+    border: 3px solid #af8c6a;
+    /* add a border */
+}
+
+.link-buttons:hover {
+    background-color: #af8c6a;
+    border: 3px solid #c1a68b;
+    /* not sure if i need to add anything # */
+}
