Autocomplete off for some
of it :,(

--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -14,7 +14,7 @@
 			</div>
 
 			<div id="comments">
-				<form id="commentform">
+				<form id="commentform" autocomplete="off">
 					<h1>Comments</h1>
 					<input type="text"  name="myname" placeholder="Your Name" required>
 					<input type="text"  name="comment" placeholder="Your Comment" required>
