--- a/templates/new-blog-post.html
+++ b/templates/new-blog-post.html
@@ -2,7 +2,7 @@
 {% block content %}
     <!-- Main Body of Page -->
 		<div class = "main">
-            <form>
+            <form autocomplete="off">
                 <h2>Title</h2>
                 <input type="text" style="width: 100%;" name="subject" required><br><br>
                 <h2>Begin your post here</h2>
