--- a/static/css/get-mc_style.css
+++ b/static/css/get-mc_style.css
@@ -13,6 +13,12 @@
     align-items: center;
 }
 
+/*
+.option-selection:hover {
+    background-color: #70B237;
+}
+*/
+
 .option-selection > img {
     max-width: 100%;
     max-height: 100%;
@@ -31,6 +37,12 @@
 .purchase-where, .download-where {
     width: 50%;
     margin-right: 20px;
+}
+
+li:hover a {
+    background-color: #70B237;
+    width: 100%;
+    /* font-weight: bold; */
 }
 
 /* ------------------------------------------------------------------------ */
