Seeds Implemented Mostly
You can now insert a world seed, view all seeds (shows seed string and seed tag) and you can change the view, sorting by platform. If there is nothing to display for a view, it displays a message on the html thanks to javascript. Could maybe probably use some more style. I want to implement delete functions on all of our database stuff which really will not be hard at all

--- a/static/css/new-seed.css
+++ b/static/css/new-seed.css
@@ -26,3 +26,8 @@ input[type="checkbox"] {
     background-color: #c1a68b;
 	border: 3px solid #af8c6a;
 }
+
+input[type="radio"] {
+    background-color: #c1a68b;
+	border: 3px solid #af8c6a;
+}
