--- a/templates/template.html
+++ b/templates/template.html
@@ -18,7 +18,7 @@
 					<a href="/home">Home</a>
 					<a href="/getmc">Get Minecraft</a>
 					<a href="/blogpost">Blog Posts</a>
-					<a href="/worldseed">World Seeds</a>
+					<a href="/worldseed/all">World Seeds</a>
 					<a href="/buildideas">Build Ideas</a>
 					<a href="/adminlogin">Login</a>
 				</div>
@@ -38,4 +38,6 @@
 			</div>
 		</div>
     </body>
+	{% block scripts %}
+	{% endblock %}
 </html>
