--- a/templates/new-world-seed.html
+++ b/templates/new-world-seed.html
@@ -15,28 +15,28 @@
                 <input type="text" id = "seed-num" name="seedstr" required>
                 <br><br>
                 <h2>Choose your platform: </h2>
-                <input type="radio" name="platform" value="java" id="java">
+                <input type="radio" name="platform" value="java" id="java" required>
                 <label for="java">Java Edition</label>
-                <input type="radio" name="platform" value="bedrock" id="bedrock">
+                <input type="radio" name="platform" value="bedrock" id="bedrock" required>
                 <label for="bedrock">Bedrock Edition</label>
                 <br><br>
                 <h2>Tags (Select One)</h2>
 
                 <div class = "tag-container">
                     <div class = "tag-col">
-                        <input type="radio" class = "tag-check-box" name="tag" id="tag1" value="Village">
+                        <input type="radio" class = "tag-check-box" name="tag" id="tag1" value="Village" required>
                         <label for="tag1">Village</label><br>
-                        <input type="radio" class = "tag-check-box" name="tag" id="tag2" value="Mountains">
+                        <input type="radio" class = "tag-check-box" name="tag" id="tag2" value="Mountains" required>
                         <label for="tag2">Mountains</label><br>
-                        <input type="radio" class = "tag-check-box" name="tag" id="tag3" value="FlatLand">
+                        <input type="radio" class = "tag-check-box" name="tag" id="tag3" value="FlatLand" required>
                         <label for="tag3">Flat Land</label><br>
                     </div>
                     <div class = "tag-col">
-                        <input type="radio" class = "tag-check-box" name="tag" id="tag4" value="Lava">
+                        <input type="radio" class = "tag-check-box" name="tag" id="tag4" value="Lava" required>
                         <label for="tag4">Lava</label><br>
-                        <input type="radio" class = "tag-check-box" name="tag" id="tag5" value="Diamonds">
+                        <input type="radio" class = "tag-check-box" name="tag" id="tag5" value="Diamonds" required>
                         <label for="tag5">Diamonds</label><br>
-                        <input type="radio" class = "tag-check-box" name="tag" id="tag6" value="Mineshaft">
+                        <input type="radio" class = "tag-check-box" name="tag" id="tag6" value="Mineshaft" required>
                         <label for="tag6">Mineshaft</label><br>
                     </div>
                 </div>
