--- a/templates/world-seed.html
+++ b/templates/world-seed.html
@@ -6,7 +6,7 @@
 			<p><b>Seed:</b> {{ seed[1] }}</p>
 			<p><b>Tag: </b>{{ tag[1] }}</p>
 			<p><b>Description: </b>{{ seed[2] }}</p>
-			<p><b>Platform: </b>{{ seed[3] }}</p>
+			<p class="proper"><b>Platform: </b>{{ seed[3] }}</p>
 			<br><br>
 		</div>
 {% endblock %}
