--- a/static/css/global.css
+++ b/static/css/global.css
@@ -205,3 +205,7 @@ input[type=text]:focus, textarea:focus {
     border: 3px solid #c1a68b;
     /* not sure if i need to add anything # */
 }
+
+.proper {
+    text-transform: capitalize;
+}
